@@ -11,6 +11,7 @@ import tempfile
 import subprocess
 import urllib.request
 import webbrowser
+import shutil
 
 import apt
 
@@ -1025,13 +1026,28 @@ def whichpackage(args):
 
     Note: if no match is found, the apt-file repository is checked"""
     try:
-        out = perform.execute("dpkg --search " + args.pattern, getoutput=True)
+        output = perform.execute(
+            "dpkg --search " + args.pattern, getoutput=True
+        )
     except subprocess.CalledProcessError:
-        util.requires_package("apt-file")
-        perform.execute("apt-file search " + args.pattern)
+        output = ""
+    installed_matches = output.decode().strip().split('\n')
+    header = "INSTALLED MATCHES (x{})".format(len(installed_matches))
+    print(header)
+    print('-' * len(header))
+    for line in installed_matches:
+        print(line)
+    print()
+    if shutil.which("apt-file"):
+        output = perform.execute(
+            "apt-file search " + args.pattern, getoutput=True
+        )
+        all_matches = output.decode().strip().split('\n')
+        uninstalled_matches = set(all_matches) - set(installed_matches)
+        header = "UNINSTALLED MATCHES (x{})".format(len(uninstalled_matches))
+        print(header)
+        print('-' * len(header))
+        for line in uninstalled_matches:
+            print(line)
     else:
-        try:
-            print(out.decode().strip())
-        # will get here when on --simulate mode
-        except AttributeError:
-            pass
+        print("NOTE: install apt-file in order to display uninstalled matches")
